{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 40,
  "lineage": "166bd3ac-89ec-6689-1d7b-7d53db192d40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8e27447ec2c8410",
            "arn": "arn:aws:ec2:eu-west-2:482120736852:instance/i-077dea8c8fd932f3f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-077dea8c8fd932f3f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wordpress-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0efbeedcb35063625",
            "private_dns": "ip-10-0-1-130.eu-west-2.compute.internal",
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-35-178-92-246.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.92.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01aadd5cac01826e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e45381d2064d7d3",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f23baef989d77b7"
            ]
          },
          "depends_on": [
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-056c9fc795e0a994e",
            "owner_id": "482120736852",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-02e74dfc54ce68933"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06beed1b1b6a251f4",
            "owner_id": "482120736852",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056c9fc795e0a994e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-02e74dfc54ce68933"
          },
          "depends_on": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cd70a0cc28e404e",
            "route_table_id": "rtb-06beed1b1b6a251f4",
            "subnet_id": "subnet-00e45381d2064d7d3"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:482120736852:security-group/sg-05f23baef989d77b7",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f23baef989d77b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "482120736852",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e74dfc54ce68933"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:482120736852:subnet/subnet-00e45381d2064d7d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00e45381d2064d7d3",
            "map_public_ip_on_launch": true,
            "owner_id": "482120736852",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-02e74dfc54ce68933"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:482120736852:subnet/subnet-0a769e087f541d196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a769e087f541d196",
            "map_public_ip_on_launch": true,
            "owner_id": "482120736852",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-02e74dfc54ce68933"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:482120736852:subnet/subnet-0db83d0281a27af3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0db83d0281a27af3f",
            "map_public_ip_on_launch": true,
            "owner_id": "482120736852",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-02e74dfc54ce68933"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:482120736852:vpc/vpc-02e74dfc54ce68933",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3419837e0b2875e",
            "default_route_table_id": "rtb-0d5ecf70538237376",
            "default_security_group_id": "sg-0b61b0e6efed7cd6c",
            "dhcp_options_id": "dopt-666c2e0e",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02e74dfc54ce68933",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5ecf70538237376",
            "owner_id": "482120736852",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}